add slice_metric endpoint
