# biz_data_browser.py
@@ -24,13 +24,13 @@ warehouse = BizStatsClient()
 
 
 # @st.cache()
-def load_feed_slice(feed_code, period_type, start):
-    df = warehouse.slice_feed(feed_code, metrics, start, period_type=period_type)
+def load_feed_slice(feed_code, period_type, start, stop):
+    df = warehouse.slice_feed(feed_code, metrics, start, stop, period_type=period_type)
     return df
 
 
-def load_metric_slice(metric, start, stop):
-    df = warehouse.slice_metric(start, stop, PeriodType.MONTH, metric)
+def load_metric_slice(metric, start, stop, period_type):
+    df = warehouse.slice_metric(start=start, stop=stop, period_type=period_type, metric=metric)
     return df
 
 
@@ -40,9 +40,10 @@ def main():
 
     if page == "Slice Feed":
         start = dt.datetime.combine(st.date_input('start', dt.date(2020, 1, 1)), dt.datetime.min.time())
+        stop = dt.datetime.combine(st.date_input('stop', dt.date.today()), dt.datetime.min.time())
         feed_code = st.selectbox("Feed", get_feeds().feed_code)
-        period_type = st.selectbox("Period Type", list(PeriodType))
-        df = load_feed_slice(feed_code, period_type, start)
+        period_type = st.selectbox("Period Type", list(PeriodType), 3)
+        df = load_feed_slice(feed_code, period_type, start, stop)
         y_axis = st.selectbox("Metric", df.columns)
         c = alt.Chart(df.reset_index()).mark_line().encode(x='date', y=y_axis, tooltip=['date', y_axis])
         st.altair_chart(c, use_container_width=True)
@@ -50,12 +51,13 @@ def main():
 
     if page == "Slice Metric":
         start = dt.datetime.combine(st.date_input('start', dt.date(2018, 1, 1)), dt.datetime.min.time())
-        stop = dt.datetime.combine(st.date_input('start', dt.date.today()), dt.datetime.min.time())
+        stop = dt.datetime.combine(st.date_input('stop', dt.date.today()), dt.datetime.min.time())
+        period_type = st.selectbox("Period Type", list(PeriodType), 3)
         metric = st.selectbox("Metric", metrics)
         feeds = st.multiselect('Feed codes', get_feeds().feed_code)
         with st.spinner('Wait for it...'):
-            df = load_metric_slice(warehouse, metric, start, stop).T[feeds].unstack().rename(metric.name).reset_index()
-        c = alt.Chart(df).mark_line().encode(x='start', y=metric.name, color='feed_code')
+            df = load_metric_slice(metric, start, stop, period_type).T[feeds].unstack().rename(metric.name).reset_index()
+        c = alt.Chart(df).mark_line().encode(x='date', y=metric.name, color='entity')
         st.altair_chart(c, use_container_width=True)
 
 
